[project]
name = "placeholder-name"
version = "0.1.0"
description = ""
authors = [
    {name = "placeholder-author", email = "placeholder@email.com"},
]
dependencies = [
    "python-dotenv",
    "loguru",
    "PySnooper",
    "requests",
]
requires-python = ">=3.13"
license = {text = "UNLICENCE"}
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
